# anitrends

./: README.md  index.html  package-lock.json
rust/: Cargo.toml
rust/src/: lib.rs
src/: App.svelte  main.js
svelte/: package-lock.json  package.json  vite.config.js
svelte/src/: App.svelte  main.js
svelte/wasm/: Cargo.toml
wasm/: LICENSE
wasm/src/: lib.rs
