[package]
name = "anitrends"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde_json = "1.0.82"
reqwest = "0.11.11"
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.31"